# cpp-tests

./: gtest.cmake
member_init/: CMakeLists.txt  Person.h  README.md  String.h  build_and_run.sh  main.cpp
object_alloc/: CMakeLists.txt  Person.h  README.md  String.h  Test.cpp  build_and_run.sh  main.cpp
